--- a/themes/uteks/templates/index.html
+++ b/themes/uteks/templates/index.html
@@ -12,7 +12,7 @@
     <span class="glyphicon glyphicon-time"></span> Posted on {{ article.date.date() }}</p>
 <hr>
 <p>{{ article.content }}</p>
-<!-- <a class="btn btn-primary" href="{{ SITEURL }}/{{ article.url }}">Read More <span class="glyphicon glyphicon-chevron-right"></span></a> -->
+<a class="btn btn-primary" href="{{ SITEURL }}/{{ article.url }}">Leave a comment <span class="glyphicon glyphicon-chevron-right"></span></a>
 <hr>
 {% endfor %}
 
