--- a/themes/uteks/templates/base.html
+++ b/themes/uteks/templates/base.html
@@ -51,21 +51,9 @@
                 </button>
                 <a class="navbar-brand" href="/">utek's thoughts</a>
             </div>
-
-            <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse navbar-ex1-collapse">
-                <!-- <ul class="nav navbar-nav">
-                    <li><a href="#about">About</a>
-                    </li>
-                    <li><a href="#services">Services</a>
-                    </li>
-                    <li><a href="#contact">Contact</a>
-                    </li>
-                </ul> -->
             </div>
-            <!-- /.navbar-collapse -->
         </div>
-        <!-- /.container -->
     </nav>
 
     <div class="container">
@@ -77,18 +65,6 @@
             </div>
 
             <div class="col-lg-4">
-                <!-- <div class="well">
-                    <h4>Blog Search</h4>
-                    <div class="input-group">
-                        <input type="text" class="form-control">
-                        <span class="input-group-btn">
-                            <button class="btn btn-default" type="button">
-                                <span class="glyphicon glyphicon-search"></span>
-                            </button>
-                        </span>
-                    </div>
-                </div> -->
-                <!-- /well -->
                 <div class="well">
                     <h4>Categories</h4>
                     <div class="row">
@@ -132,7 +108,7 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; Łukasz Bodys 2014</p>
+                    <p>Copyright &copy; Łukasz Bołdys 2014</p>
                 </div>
             </div>
         </footer>
